@@ -3,6 +3,8 @@ ChangeLog
 
 Release: 2.0.0
 ===============================================================================
+2025-04-30 Fixed background of popups and pages for G5. Fixed subviews.
+
 2025-04-25 Added G5 commands ^PCL, ^PCT and ^PTC.
 
 2025-04-24 Added support for G5 gradient fill of buttons.
